I fixed some alignment issues with home page and Manage-features/Manage-groups pages

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,9 @@ ul{
   text-align: center;
   margin-top: 100px;
 }
+#main_div_second{
+  margin-top: 250px;
+}
 
 h1{
   color: white;
